# DeepLearning

./: .gitignore  README.md  pyproject.toml
report/: assignment1.tex
scripts/: stanforddogs.ipynb
scripts/experiment-1/: catsanddogs.out  catsanddogs.py  catsanddogs.sh
scripts/experiment-2/: pretrained_catsanddogs.out  pretrained_catsanddogs.py  pretrained_catsanddogs.sh
scripts/experiment-3/: experiment-3.out  pretrained_catsanddogs2.py  pretrained_catsanddogs2.sh
scripts/experiment-4/: experiment-4.out  pretrained_catsanddogs3.py  pretrained_catsanddogs3.sh
scripts/setup/: stanforddogs.out  stanforddogs.py  stanforddogs.sh
scripts/visualization/: clean_logs.py  create_plot.py
